# pitwaller

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/: benchmark_covariate_shift.py  benchmark_retrieval.py  benchmark_text_ood.py  calibration_analysis.py  quickstart.py
src/pitwaller/: __init__.py  confidence.py  decisions.py  demo.py  embeddings.py  index.py  monitoring.py  ood.py  pipeline.py  retrieval.py  tier_calibration.py
src/pitwaller/experimental/: __init__.py  bn_recal.py  calibration.py  decisions.py
tests/: test_bn_recal.py  test_calibration.py  test_confidence.py  test_decisions.py  test_guarantees.py  test_index.py  test_ood.py  test_pipeline.py  test_retrieval.py  test_tier_calibration.py
